--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ docker_env/mysql/data/
 docker_env/redis/data/
 */.idea
 dvadmin-doc/docs/.vuepress/dist
+docker_env/mongo/data/*
+kinit-admin/dist-pro/*
+kinit-admin/public/static/*
